[metadata]
name = stsci.ndimage
version = 0.9.0
author = STScI
author-email = help@stsci.edu
summary = Various functions for multi-dimensional image processing--fork of
 scipy.ndimage for use with stsci_python
home-page = http://www.stsci.edu/resources/software_hardware/pyraf/stsci_python 
license = http://www.stsci.edu/resources/software_hardware/pyraf/LICENSE
requires-python = >=2.3
# TODO: This version specifier format is for setuptools, not distutils2.  Need
# to implement a conversion mechanism
requires-dist =
    stsci.tools==2.9
    numpy==1.5.1

[files]
packages_root = lib
packages =
    stsci
    stsci.ndimage
    stsci.ndimage.test
package_data = stsci.ndimage.test = *.png

[extension=stsci.ndimage._nd_image]
sources =
    src/nd_image.c
    src/ni_filters.c
    src/ni_fourier.c
    src/ni_interpolation.c
    src/ni_measure.c
    src/ni_morphology.c
    src/ni_support.c
requires_numpy = True

[global]
setup_hook = stsci.tools.dist.numpy_extension_hook
